bin/testsuite/tests/compiler/src/errors/compiler4949.swg
#global testerror "Err0094"
#test
{
    foreach x in toto
    {
    }
}
